tests/invalid/VarDecl_Invalid_3.whiley
function f() -> int:
    int x = 0b010
    return x
